--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj
@@ -158,12 +158,12 @@
     <ClInclude Include="..\..\Panel\src\Display\Painter.h" />
     <ClInclude Include="..\..\Panel\src\dox\Page01.h" />
     <ClInclude Include="..\..\Panel\src\dox\Page02.h" />
+    <ClInclude Include="..\..\Panel\src\Hardware\Controls.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\CPU.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\Decoder.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\FSMC.h" />
+    <ClInclude Include="..\..\Panel\src\Hardware\Keyboard.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\Timer.h" />
-    <ClInclude Include="..\..\Panel\src\Keyboard\Controls.h" />
-    <ClInclude Include="..\..\Panel\src\Keyboard\Keyboard.h" />
     <ClInclude Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
@@ -214,8 +214,8 @@
     <ClCompile Include="..\..\Panel\src\Hardware\CPU_IT.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Decoder.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\FSMC.cpp" />
+    <ClCompile Include="..\..\Panel\src\Hardware\Keyboard.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Timer.cpp" />
-    <ClCompile Include="..\..\Panel\src\Keyboard\Keyboard.cpp" />
     <ClCompile Include="..\..\Panel\src\libs\CMSIS\system_stm32f4xx.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
