--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj
@@ -160,7 +160,6 @@
     <ClInclude Include="..\..\Panel\src\dox\Page02.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\Controls.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\CPU.h" />
-    <ClInclude Include="..\..\Panel\src\Hardware\Decoder.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\FSMC.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\Keyboard.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\Timer.h" />
@@ -202,6 +201,7 @@
     </ClInclude>
     <ClInclude Include="..\..\Panel\src\libs\HAL\stm32f4xx_hal_conf.h" />
     <ClInclude Include="..\..\Panel\src\libs\HAL\stm32f4xx_it.h" />
+    <ClInclude Include="..\..\Panel\src\Utils\Decoder.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\libs\common\Hardware\stm32\4XX\stm429.cpp" />
@@ -212,7 +212,6 @@
     <ClCompile Include="..\..\Panel\src\Display\Painter.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\CPU.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\CPU_IT.cpp" />
-    <ClCompile Include="..\..\Panel\src\Hardware\Decoder.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\FSMC.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Keyboard.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Timer.cpp" />
@@ -258,6 +257,7 @@
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_tim_ex.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\..\Panel\src\Utils\Decoder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\libs\common\_VS\algorithm" />
