--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\libs\common\Hardware\stm32\4XX\stm429.h" />
     <ClInclude Include="..\..\libs\common\Hardware\stm32\stm32.h" />
+    <ClInclude Include="..\..\libs\common\Hardware\Timer.h" />
     <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc.h" />
     <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc_V6.h" />
     <ClInclude Include="..\..\libs\common\_VS\core_cm4.h" />
@@ -162,7 +163,6 @@
     <ClInclude Include="..\..\Panel\src\Hardware\CPU.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\FSMC.h" />
     <ClInclude Include="..\..\Panel\src\Hardware\Keyboard.h" />
-    <ClInclude Include="..\..\Panel\src\Hardware\Timer.h" />
     <ClInclude Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
@@ -207,6 +207,7 @@
     <ClCompile Include="..\..\libs\common\Hardware\stm32\4XX\stm429.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\stm32\stm32.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\stm32\stm32_it.cpp" />
+    <ClCompile Include="..\..\libs\common\Hardware\Timer.cpp" />
     <ClCompile Include="..\..\Panel\src\Display\Display.cpp" />
     <ClCompile Include="..\..\Panel\src\Display\font\Font.cpp" />
     <ClCompile Include="..\..\Panel\src\Display\Painter.cpp" />
@@ -214,7 +215,6 @@
     <ClCompile Include="..\..\Panel\src\Hardware\CPU_IT.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\FSMC.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Keyboard.cpp" />
-    <ClCompile Include="..\..\Panel\src\Hardware\Timer.cpp" />
     <ClCompile Include="..\..\Panel\src\libs\CMSIS\system_stm32f4xx.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
