--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj.filters
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj.filters
@@ -81,9 +81,6 @@
     <ClInclude Include="..\..\Panel\src\Display\DisplayTypes.h">
       <Filter>Display</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Panel\src\Hardware\Timer.h">
-      <Filter>Hardware</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Panel\src\Hardware\FSMC.h">
       <Filter>Hardware</Filter>
     </ClInclude>
@@ -183,6 +180,9 @@
     <ClInclude Include="..\..\Panel\src\Utils\Decoder.h">
       <Filter>Utils</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\libs\common\Hardware\Timer.h">
+      <Filter>Hardware</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c">
@@ -223,9 +223,6 @@
     </ClCompile>
     <ClCompile Include="..\..\Panel\src\Display\Painter.cpp">
       <Filter>Display</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Panel\src\Hardware\Timer.cpp">
-      <Filter>Hardware</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Panel\src\Hardware\FSMC.cpp">
       <Filter>Hardware</Filter>
@@ -268,6 +265,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Panel\src\Utils\Decoder.cpp">
       <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\libs\common\Hardware\Timer.cpp">
+      <Filter>Hardware</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
