--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj.filters
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj.filters
@@ -13,9 +13,6 @@
     <Filter Include="Display">
       <UniqueIdentifier>{327b6c79-bb9a-4377-bd51-b3c7d47da90d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Display\font">
-      <UniqueIdentifier>{d6659ae3-6ed5-4e18-a5f3-de24af9008fc}</UniqueIdentifier>
-    </Filter>
     <Filter Include="_VS">
       <UniqueIdentifier>{ffaf6464-8d65-4869-8a06-a13dc849bdfc}</UniqueIdentifier>
     </Filter>
@@ -33,6 +30,12 @@
     </Filter>
     <Filter Include="Utils">
       <UniqueIdentifier>{d5ea1d8d-e843-4555-b6dd-9afea2d5a02a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Settings">
+      <UniqueIdentifier>{f6363446-0cda-4734-8647-645e0a5ea0ca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Display\Font">
+      <UniqueIdentifier>{d6659ae3-6ed5-4e18-a5f3-de24af9008fc}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -72,11 +75,8 @@
     <ClInclude Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_rcc_ex.h">
       <Filter>libs\HAL</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Panel\src\Display\Painter.h">
-      <Filter>Display</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Panel\src\Display\font\Font.h">
-      <Filter>Display\font</Filter>
+      <Filter>Display\Font</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Panel\src\Display\DisplayTypes.h">
       <Filter>Display</Filter>
@@ -183,6 +183,18 @@
     <ClInclude Include="..\..\libs\common\Hardware\Timer.h">
       <Filter>Hardware</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Panel\src\Settings\SettingsTypes.h">
+      <Filter>Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Panel\src\Settings\SettingsDisplay.h">
+      <Filter>Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\Display\Colors.h">
+      <Filter>Display</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\libs\common\Display\Painter.h">
+      <Filter>Display</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c">
@@ -221,9 +233,6 @@
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_rcc_ex.c">
       <Filter>libs\HAL</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Panel\src\Display\Painter.cpp">
-      <Filter>Display</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Panel\src\Hardware\FSMC.cpp">
       <Filter>Hardware</Filter>
     </ClCompile>
@@ -234,7 +243,7 @@
       <Filter>libs\HAL</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Panel\src\Display\font\Font.cpp">
-      <Filter>Display\font</Filter>
+      <Filter>Display\Font</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Panel\src\libs\HAL\stm32f4xx_hal_msp.c">
       <Filter>libs\HAL</Filter>
@@ -269,19 +278,40 @@
     <ClCompile Include="..\..\libs\common\Hardware\Timer.cpp">
       <Filter>Hardware</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Panel\src\Hardware\CPU_LTDC.cpp">
+      <Filter>Hardware</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Panel\src\Settings\Settings.cpp">
+      <Filter>Settings</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\libs\common\Display\Colors.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\libs\common\Display\Painter.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\libs\common\Display\PainterSTM429.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\libs\common\Display\PainterText.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\libs\common\Display\PainterTextSTM429.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Panel\src\Display\font\font5.inc">
-      <Filter>Display\font</Filter>
+      <Filter>Display\Font</Filter>
     </None>
     <None Include="..\..\Panel\src\Display\font\font8.inc">
-      <Filter>Display\font</Filter>
+      <Filter>Display\Font</Filter>
     </None>
     <None Include="..\..\Panel\src\Display\font\fontUGO.inc">
-      <Filter>Display\font</Filter>
+      <Filter>Display\Font</Filter>
     </None>
     <None Include="..\..\Panel\src\Display\font\fontUGO2.inc">
-      <Filter>Display\font</Filter>
+      <Filter>Display\Font</Filter>
     </None>
     <None Include="..\..\libs\common\_VS\algorithm">
       <Filter>_VS</Filter>
