--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_tim_ex.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\..\Panel\src\Hardware\LTDC.h" />
     <ClInclude Include="..\..\Panel\src\libs\HAL\stm32f4xx_hal_conf.h" />
     <ClInclude Include="..\..\Panel\src\libs\HAL\stm32f4xx_it.h" />
     <ClInclude Include="..\..\Panel\src\Settings\SettingsDisplay.h" />
@@ -220,13 +221,12 @@
     <ClCompile Include="..\..\Panel\src\Display\font\Font.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\CPU.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\CPU_IT.cpp" />
-    <ClCompile Include="..\..\Panel\src\Hardware\CPU_LTDC.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\FSMC.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Keyboard.cpp" />
+    <ClCompile Include="..\..\Panel\src\Hardware\LTDC.cpp" />
     <ClCompile Include="..\..\Panel\src\libs\CMSIS\system_stm32f4xx.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\Panel\src\libs\HAL\stm32f4xx_hal_msp.c" />
     <ClCompile Include="..\..\Panel\src\libs\HAL\stm32f4xx_it.c" />
     <ClCompile Include="..\..\Panel\src\main.cpp" />
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c">
